# TransMaster

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
TransMaster/: CMakeLists.txt  TransMaster.aps  TransMaster.cpp  TransMaster.h  TransMaster.rc  TransMaster.ui  TransMaster_en.ts  main.cpp
